[gd_scene load_steps=23 format=3 uid="uid://7b8ecsljuur7"]

[ext_resource type="Script" uid="uid://bciar80p3kqcc" path="res://scripts/player.gd" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://bbqkm07fo1hkp" path="res://scripts/world.gd" id="1_ic0uy"]
[ext_resource type="ArrayMesh" uid="uid://dku845kqwnd76" path="res://assets/obj/bowl.obj" id="2_fj7yv"]
[ext_resource type="Texture2D" uid="uid://dtxutdwarivkd" path="res://assets/Cursor.png" id="3_tlwt5"]
[ext_resource type="ArrayMesh" uid="uid://bqcilnxekln6g" path="res://assets/obj/table_round_A.obj" id="4_aqk2v"]
[ext_resource type="ArrayMesh" uid="uid://b3yrokh8w85cr" path="res://assets/obj/kitchencounter_sink.obj" id="5_gbfbk"]
[ext_resource type="ArrayMesh" uid="uid://chytia7sek7ru" path="res://assets/obj/kitchencounter_straight_B.obj" id="6_ioo17"]
[ext_resource type="ArrayMesh" uid="uid://ccdu8si88el7q" path="res://assets/obj/kitchencounter_innercorner.obj" id="7_wse8f"]
[ext_resource type="ArrayMesh" uid="uid://dncwc5px4srsq" path="res://assets/obj/kitchencounter_straight_A_decorated.obj" id="8_ic0uy"]
[ext_resource type="ArrayMesh" uid="uid://dodfdfkndbmla" path="res://assets/obj/cuttingboard.obj" id="9_ioo17"]
[ext_resource type="ArrayMesh" uid="uid://dnw6ln86toimb" path="res://assets/obj/knife.obj" id="11_k3n1d"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f3sb7"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("ProceduralSkyMaterial_f3sb7")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")
tonemap_mode = 2
fog_density = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fj7yv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tlwt5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tlwt5"]
height = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_aqk2v"]
height = 1.0
radius = 1.48

[sub_resource type="BoxShape3D" id="BoxShape3D_k3n1d"]
size = Vector3(3.99, 0.99, 1.99)

[sub_resource type="BoxShape3D" id="BoxShape3D_2o6r5"]
size = Vector3(1.99, 0.99, 3.99)

[sub_resource type="BoxShape3D" id="BoxShape3D_wse8f"]
size = Vector3(1.49, 0.175, 0.99)

[sub_resource type="BoxShape3D" id="BoxShape3D_70uel"]
size = Vector3(0.255676, 1.15002, 0.101353)

[node name="world" type="Node3D"]
script = ExtResource("1_ic0uy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
use_collision = true
size = Vector3(24, 0.195, 24)

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.675)
script = ExtResource("1_f3sb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_fj7yv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
mesh = SubResource("CapsuleMesh_tlwt5")

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645, 0)

[node name="player_camera" type="Camera3D" parent="player/head"]
current = true
fov = 90.0

[node name="seecast" type="RayCast3D" parent="player/head/player_camera"]
target_position = Vector3(0, 0, -3)

[node name="pickup_timer" type="Timer" parent="player"]

[node name="bowl" type="RigidBody3D" parent="." groups=["pickupable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01034, 0)
mass = 0.8

[node name="bowl" type="MeshInstance3D" parent="bowl"]
mesh = ExtResource("2_fj7yv")
skeleton = NodePath("../../player/head/player_camera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="bowl"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.151726, 0)
shape = SubResource("CylinderShape3D_tlwt5")

[node name="ui" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ui"]
position = Vector2(960, 540)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tlwt5")
offset = Vector2(43, 134)

[node name="Label" type="Label" parent="ui"]
offset_right = 485.0
offset_bottom = 43.0
text = "Money: 0"

[node name="table" type="StaticBody3D" parent="."]

[node name="TableRoundA" type="MeshInstance3D" parent="table"]
mesh = ExtResource("4_aqk2v")
skeleton = NodePath("../../player/head/player_camera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.498779, 0)
shape = SubResource("CylinderShape3D_aqk2v")

[node name="counter" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="KitchencounterStraightADecorated" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 4)
mesh = ExtResource("8_ic0uy")
skeleton = NodePath("../..")

[node name="KitchencounterSink" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 2)
mesh = ExtResource("5_gbfbk")
skeleton = NodePath("../..")

[node name="KitchencounterStraightB" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
mesh = ExtResource("6_ioo17")
skeleton = NodePath("../..")

[node name="KitchencounterInnercorner" type="MeshInstance3D" parent="counter"]
mesh = ExtResource("7_wse8f")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0)
shape = SubResource("BoxShape3D_k3n1d")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 3)
shape = SubResource("BoxShape3D_2o6r5")

[node name="chopping_board" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.1461, 1, 0.0853236)

[node name="Cuttingboard" type="MeshInstance3D" parent="chopping_board"]
mesh = ExtResource("9_ioo17")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="chopping_board"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
shape = SubResource("BoxShape3D_wse8f")

[node name="knife" type="RigidBody3D" parent="." groups=["pickupable"]]
transform = Transform3D(-5.21253e-16, -1.19249e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, 1.19249e-08, 1.73527, 2.5108, 0)
mass = 0.6

[node name="Knife" type="MeshInstance3D" parent="knife"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, 0)
mesh = ExtResource("11_k3n1d")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="knife"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, 0)
shape = SubResource("BoxShape3D_70uel")

[connection signal="timeout" from="player/pickup_timer" to="player" method="_on_pickup_timer_timeout"]
[connection signal="area_entered" from="chopping_board" to="." method="_on_chopping_board_area_entered"]
